--- a/Desvendando-Bibliotecas-do-Python/Numpy.ipynb
+++ b/Desvendando-Bibliotecas-do-Python/Numpy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,9 +242,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.40097417, 0.02183289, 0.83127721],\n",
-       "       [0.57771193, 0.41223296, 0.49581368],\n",
-       "       [0.54366152, 0.35153998, 0.18889302]])"
+       "array([[0.02373495, 0.06422631, 0.40879769],\n",
+       "       [0.57112597, 0.26104937, 0.7541172 ],\n",
+       "       [0.37489384, 0.21551154, 0.24389588]])"
       ]
      },
      "execution_count": 11,
@@ -271,7 +271,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.02309904, -0.39185042,  1.29851255,  0.85488673,  0.47897124])"
+       "array([-0.87770247, -0.72227578,  0.1609518 , -1.30369043,  0.1729823 ])"
       ]
      },
      "execution_count": 12,
@@ -308,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "[5, 4, 3, 6]"
+       "[6, 4, 3, 5]"
       ]
      },
      "execution_count": 13,
@@ -337,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 6, 3, 5])"
+       "array([3, 4, 5, 6])"
       ]
      },
      "execution_count": 14,
@@ -357,7 +357,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 7,  3, 14, 14,  6, 20,  1, 11,  5, 16, 15,  4, 17, 20, 23])"
+       "array([18, 12,  5, 17, 12,  4,  2,  8,  1, 18,  4, 21, 23, 12, 11])"
       ]
      },
      "execution_count": 15,
@@ -384,7 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "array([5, 4, 3, 6])"
+       "array([6, 4, 3, 5])"
       ]
      },
      "execution_count": 16,
@@ -406,8 +406,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[5, 4],\n",
-       "       [3, 6]])"
+       "array([[6, 4],\n",
+       "       [3, 5]])"
       ]
      },
      "execution_count": 17,
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "0"
       ]
      },
      "execution_count": 21,
@@ -535,7 +535,7 @@
     {
      "data": {
       "text/plain": [
-       "6"
+       "5"
       ]
      },
      "execution_count": 23,
@@ -555,7 +555,7 @@
     {
      "data": {
       "text/plain": [
-       "array([3, 6])"
+       "array([3, 5])"
       ]
      },
      "execution_count": 24,
@@ -575,7 +575,7 @@
     {
      "data": {
       "text/plain": [
-       "array([5, 4, 3, 6])"
+       "array([6, 4, 3, 5])"
       ]
      },
      "execution_count": 25,
@@ -595,7 +595,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 3, 6])"
+       "array([4, 3, 5])"
       ]
      },
      "execution_count": 26,
@@ -629,7 +629,7 @@
     {
      "data": {
       "text/plain": [
-       "array([5, 4])"
+       "array([6, 4])"
       ]
      },
      "execution_count": 27,
@@ -671,7 +671,7 @@
     {
      "data": {
       "text/plain": [
-       "array([5, 4, 3, 6])"
+       "array([6, 4, 3, 5])"
       ]
      },
      "execution_count": 29,
@@ -698,11 +698,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.81727994,  0.32141337, -0.27853536, -0.36155196, -0.48597877],\n",
-       "       [-0.29998633, -0.38028937, -0.51079064, -0.06953578,  1.46304007],\n",
-       "       [ 0.03319142,  1.20027927, -1.74765199,  1.45852526, -0.24805329],\n",
-       "       [ 1.37516347,  0.93679418,  0.68181155,  0.02889892,  0.97965763],\n",
-       "       [ 1.360192  ,  1.03527024, -1.23386269,  0.15255556, -0.42247949]])"
+       "array([[-0.24986861,  0.53591578,  1.40246299, -1.83718132,  0.74935564],\n",
+       "       [-0.36374376, -1.31627457,  1.04673587,  1.09020197,  0.05948576],\n",
+       "       [ 1.46336694,  0.69600771, -0.46265755, -1.13755759, -0.48513803],\n",
+       "       [-0.20210306,  0.16629449, -1.35745064, -0.80732653,  0.00895441],\n",
+       "       [ 1.43998748, -1.35306253,  1.77522661, -0.75333177,  0.78029881]])"
       ]
      },
      "execution_count": 30,
@@ -733,9 +733,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.51079064, -0.06953578],\n",
-       "       [-1.74765199,  1.45852526],\n",
-       "       [ 0.68181155,  0.02889892]])"
+       "array([[ 1.04673587,  1.09020197],\n",
+       "       [-0.46265755, -1.13755759],\n",
+       "       [-1.35745064, -0.80732653]])"
       ]
      },
      "execution_count": 31,
@@ -763,9 +763,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ True,  True],\n",
-       "       [ True, False],\n",
-       "       [False, False]])"
+       "array([[False, False],\n",
+       "       [ True,  True],\n",
+       "       [ True,  True]])"
       ]
      },
      "execution_count": 32,
@@ -786,7 +786,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.51079064, -0.06953578, -1.74765199])"
+       "array([-0.46265755, -1.13755759, -1.35745064, -0.80732653])"
       ]
      },
      "execution_count": 33,
@@ -904,7 +904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercício 4: Repita o exercício para uma matriz 10000x10000. Posteriormente printe os possíveis resultados e comente sobre."
+    "#### Exercício 4: Repita o exercício para uma matriz 10000x10000."
    ]
   },
   {
@@ -999,8 +999,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[[[[0.58596157, 0.29370425, 0.17769543, 0.6655372 , 0.97967564,\n",
-       "           0.57952089, 0.36884107, 0.10076102, 0.24322361, 0.35606531]]]]])"
+       "array([[[[[0.38918799, 0.72170152, 0.78323928, 0.95214642, 0.36293907,\n",
+       "           0.40411706, 0.78112136, 0.43221752, 0.48527743, 0.33654361]]]]])"
       ]
      },
      "execution_count": 40,
@@ -1029,9 +1029,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.2339378  0.13210225 0.52721502]\n",
-      " [0.14556834 0.3409307  0.48011927]\n",
-      " [0.12881566 0.08422052 0.50383934]]\n"
+      "[[0.60836267 0.50776755 0.71856189]\n",
+      " [0.75940675 0.80273299 0.05233899]\n",
+      " [0.52951061 0.65943126 0.28401073]]\n"
      ]
     }
    ],
@@ -1048,7 +1048,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.12881566, 0.08422052, 0.50383934])"
+       "array([0.52951061, 0.65943126, 0.28401073])"
       ]
      },
      "execution_count": 42,
@@ -1094,18 +1094,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1.49164844, -1.47553812,  0.13982859],\n",
-       "       [ 1.12090322, -1.14692554, -1.49638414],\n",
-       "       [-0.74252257, -1.12489637, -0.07198669]])"
+       "array([[ 2.91407719, -1.01541892,  0.7065323 ],\n",
+       "       [-0.4581166 , -1.88083805, -0.47753377],\n",
+       "       [-0.3005257 , -0.74920519,  1.08129924]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,16 +1117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.49164844 -1.47553812  0.13982859]\n",
-      "[ 1.12090322 -1.14692554 -1.49638414]\n",
-      "[-0.74252257 -1.12489637 -0.07198669]\n"
+      "[ 2.91407719 -1.01541892  0.7065323 ]\n",
+      "[-0.4581166  -1.88083805 -0.47753377]\n",
+      "[-0.3005257  -0.74920519  1.08129924]\n"
      ]
     }
    ],
@@ -1144,22 +1144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4916484422814633\n",
-      "-1.4755381204323867\n",
-      "0.1398285938511407\n",
-      "1.120903217908213\n",
-      "-1.1469255374788063\n",
-      "-1.4963841407626304\n",
-      "-0.7425225686555832\n",
-      "-1.1248963713759768\n",
-      "-0.07198669195291775\n"
+      "2.914077189561734\n",
+      "-1.0154189163045049\n",
+      "0.7065322983304965\n",
+      "-0.45811660488543454\n",
+      "-1.880838051228916\n",
+      "-0.4775337736221477\n",
+      "-0.3005256996806537\n",
+      "-0.7492051938751123\n",
+      "1.0812992382539215\n"
      ]
     }
    ],
@@ -1177,22 +1177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) 1.4916484422814633\n",
-      "(0, 1) -1.4755381204323867\n",
-      "(0, 2) 0.1398285938511407\n",
-      "(1, 0) 1.120903217908213\n",
-      "(1, 1) -1.1469255374788063\n",
-      "(1, 2) -1.4963841407626304\n",
-      "(2, 0) -0.7425225686555832\n",
-      "(2, 1) -1.1248963713759768\n",
-      "(2, 2) -0.07198669195291775\n"
+      "(0, 0) 2.914077189561734\n",
+      "(0, 1) -1.0154189163045049\n",
+      "(0, 2) 0.7065322983304965\n",
+      "(1, 0) -0.45811660488543454\n",
+      "(1, 1) -1.880838051228916\n",
+      "(1, 2) -0.4775337736221477\n",
+      "(2, 0) -0.3005256996806537\n",
+      "(2, 1) -0.7492051938751123\n",
+      "(2, 2) 1.0812992382539215\n"
      ]
     }
    ],
@@ -1200,6 +1200,426 @@
     "for i,x in np.ndenumerate(m):\n",
     "    print(i,x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pesquisa em Numpy\n",
+    "\n",
+    "Uma das maneiras de fazer pesquisas em array no python é através do método where() contido na biblioteca Numpy. Esse método ao ser executado, retorna um conjunto de posições específicas do array parâmetro no qual é satisfeita a condição estabelecida. \n",
+    "\n",
+    "No trecho de código abaixo, define-se um vetor qualquer e em seguida o verificar determina quais as posições no qual o vetor possui um valor negativo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 3,  8, 11], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "vetor = np.array([1,2,4,-1,23,10,2,5,-11,7,9,-43,39])\n",
+    "verificador = np.where(vetor<0)\n",
+    "print(verificador)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercício 11: Utilizando o comando .randint(), gere um vetor contendo '0' e '1' de tamanho 100 e posteriormente, pesquise e printe os valores iguais a 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1,\n",
+       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0,\n",
+       "       1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exerc11 = np.random.randint(2, size=100)\n",
+    "exerc11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 3,  5,  6,  7,  9, 10, 12, 13, 15, 16, 17, 18, 19, 20, 21, 24, 26,\n",
+      "       27, 29, 30, 31, 32, 35, 36, 38, 43, 44, 45, 47, 49, 50, 51, 52, 53,\n",
+      "       57, 59, 62, 63, 66, 68, 69, 70, 74, 78, 79, 82, 83, 84, 86, 87, 88,\n",
+      "       89, 91, 92, 93, 94, 96, 98], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "verificador = np.where(exerc11==1)\n",
+    "print(verificador)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ordenação em Numpy\n",
+    "\n",
+    "A operação de ordenação é realizada através da função np.sort()."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercício 12: Gere números do tipo float de forma aleatória e, em seguida, ordene-os."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99622669, 0.99177736, 0.98759537, 0.19355656, 0.36788029,\n",
+       "       0.37439273, 0.68753515, 0.01221266, 0.95951456, 0.27172284])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = np.random.ranf(10)\n",
+    "num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.01221266 0.19355656 0.27172284 0.36788029 0.37439273 0.68753515\n",
+      " 0.95951456 0.98759537 0.99177736 0.99622669]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sort(num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OBS.: Também é possível aplicar a função a variáveis do tipo string, boolean, inteiros."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filtro em Numpy\n",
+    "\n",
+    "Essa operação pode ser implementada de variadas formas, uma delas o usuário pode criar um laço de repetição que percorre o conjunto de dados a fim de filtrar uma determinada informação. Outra opção que o usuário pode ter é a de comparar dois conjuntos de dados a fim de obter um subconjunto onde há uma harmonização entre ambos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercício 13: O Conjunto de dados abaixo refere-se ao limite aprovado de clientes para transações bancárias em um banco. Logo, implemente de três formas diferentes onde aparecem os clientes com limite aprovado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Carlos', 'João', 'Maria', 'Alex', 'Lucas', 'Luana', 'Jéssica'],\n",
+       "      dtype='<U7')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clientes = np.array([\"Carlos\",\"João\",\"Maria\",\"Alex\",\"Lucas\",\"Luana\",\"Jéssica\"])\n",
+    "clientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False,  True,  True, False, False,  True])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x =np.array([True,False,True,True,False,False,True])\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Forma 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Carlos', 'Maria', 'Alex', 'Jéssica'], dtype='<U7')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "limite = clientes[x]\n",
+    "limite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Forma 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carlos\n",
+      "Maria\n",
+      "Alex\n",
+      "Jéssica\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (len(clientes)):\n",
+    "    if(x[i]==True): \n",
+    "        print(clientes[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Forma 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Carlos' 'Maria' 'Alex' 'Jéssica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtro = x == True\n",
+    "novo_vetor = clientes[filtro]\n",
+    "\n",
+    "print(novo_vetor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Divisão de Matrizes em Numpy\n",
+    "\n",
+    "Essa operação consiste em dividir um determinado array ou matriz em n partes de n dimensões."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.93021136, 0.90950862, 0.49885093, 0.62925567, 0.00331665])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = np.random.rand(5)\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.93021136, 0.90950862]),\n",
+       " array([0.49885093]),\n",
+       " array([0.62925567]),\n",
+       " array([0.00331665])]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "novo_array = np.array_split(array, 4)\n",
+    "novo_array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercício 14: Gere uma matriz 4x4 com valores que seguem a distribuição uniforme contínua e divida-a em 4 vetores contendo as colunas da matriz original."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.87200645, 0.94731287, 0.71623025, 0.85308428],\n",
+       "       [0.38271549, 0.52093576, 0.85312661, 0.63151963],\n",
+       "       [0.91061084, 0.53197555, 0.26248818, 0.30284711],\n",
+       "       [0.59597486, 0.00256912, 0.36502603, 0.64731136]])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Gera-se a matriz\n",
+    "matriz = np.random.random_sample((4,4))\n",
+    "matriz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[0.87200645],\n",
+       "        [0.38271549],\n",
+       "        [0.91061084],\n",
+       "        [0.59597486]]),\n",
+       " array([[0.94731287],\n",
+       "        [0.52093576],\n",
+       "        [0.53197555],\n",
+       "        [0.00256912]]),\n",
+       " array([[0.71623025],\n",
+       "        [0.85312661],\n",
+       "        [0.26248818],\n",
+       "        [0.36502603]]),\n",
+       " array([[0.85308428],\n",
+       "        [0.63151963],\n",
+       "        [0.30284711],\n",
+       "        [0.64731136]])]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dividi-se a matriz original em quatriz matrizes\n",
+    "\n",
+    "nova_matriz = np.hsplit(matriz, 4)\n",
+    "nova_matriz "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
