Experimentos com o Numpy

--- a/Desvendando-Bibliotecas-do-Python/Numpy.ipynb
+++ b/Desvendando-Bibliotecas-do-Python/Numpy.ipynb
@@ -242,9 +242,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.02373495, 0.06422631, 0.40879769],\n",
-       "       [0.57112597, 0.26104937, 0.7541172 ],\n",
-       "       [0.37489384, 0.21551154, 0.24389588]])"
+       "array([[0.17613861, 0.1825507 , 0.72947992],\n",
+       "       [0.65457785, 0.60683839, 0.13635149],\n",
+       "       [0.04664077, 0.23297689, 0.56029037]])"
       ]
      },
      "execution_count": 11,
@@ -271,7 +271,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.87770247, -0.72227578,  0.1609518 , -1.30369043,  0.1729823 ])"
+       "array([ 0.02536613, -0.95155504,  1.01041577, -2.3554722 ,  0.59941551])"
       ]
      },
      "execution_count": 12,
@@ -308,7 +308,7 @@
     {
      "data": {
       "text/plain": [
-       "[6, 4, 3, 5]"
+       "[4, 6, 5, 3]"
       ]
      },
      "execution_count": 13,
@@ -337,7 +337,7 @@
     {
      "data": {
       "text/plain": [
-       "array([3, 4, 5, 6])"
+       "array([3, 5, 4, 6])"
       ]
      },
      "execution_count": 14,
@@ -357,7 +357,7 @@
     {
      "data": {
       "text/plain": [
-       "array([18, 12,  5, 17, 12,  4,  2,  8,  1, 18,  4, 21, 23, 12, 11])"
+       "array([24, 16, 22,  7, 12,  3,  5, 18, 19, 13, 18,  8, 21, 24, 10])"
       ]
      },
      "execution_count": 15,
@@ -384,7 +384,7 @@
     {
      "data": {
       "text/plain": [
-       "array([6, 4, 3, 5])"
+       "array([4, 6, 5, 3])"
       ]
      },
      "execution_count": 16,
@@ -406,8 +406,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[6, 4],\n",
-       "       [3, 5]])"
+       "array([[4, 6],\n",
+       "       [5, 3]])"
       ]
      },
      "execution_count": 17,
@@ -488,7 +488,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
      "execution_count": 21,
@@ -508,7 +508,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
      "execution_count": 22,
@@ -535,7 +535,7 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "3"
       ]
      },
      "execution_count": 23,
@@ -555,7 +555,7 @@
     {
      "data": {
       "text/plain": [
-       "array([3, 5])"
+       "array([5, 3])"
       ]
      },
      "execution_count": 24,
@@ -575,7 +575,7 @@
     {
      "data": {
       "text/plain": [
-       "array([6, 4, 3, 5])"
+       "array([4, 6, 5, 3])"
       ]
      },
      "execution_count": 25,
@@ -595,7 +595,7 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 3, 5])"
+       "array([6, 5, 3])"
       ]
      },
      "execution_count": 26,
@@ -629,7 +629,7 @@
     {
      "data": {
       "text/plain": [
-       "array([6, 4])"
+       "array([4, 6])"
       ]
      },
      "execution_count": 27,
@@ -671,7 +671,7 @@
     {
      "data": {
       "text/plain": [
-       "array([6, 4, 3, 5])"
+       "array([4, 6, 5, 3])"
       ]
      },
      "execution_count": 29,
@@ -698,11 +698,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.24986861,  0.53591578,  1.40246299, -1.83718132,  0.74935564],\n",
-       "       [-0.36374376, -1.31627457,  1.04673587,  1.09020197,  0.05948576],\n",
-       "       [ 1.46336694,  0.69600771, -0.46265755, -1.13755759, -0.48513803],\n",
-       "       [-0.20210306,  0.16629449, -1.35745064, -0.80732653,  0.00895441],\n",
-       "       [ 1.43998748, -1.35306253,  1.77522661, -0.75333177,  0.78029881]])"
+       "array([[ 0.83927489, -1.32718811,  0.0261188 , -0.1460032 ,  0.39851262],\n",
+       "       [ 0.34223946,  0.09398181, -0.36400634,  1.45830685,  0.15575494],\n",
+       "       [ 0.42168569,  0.1387864 ,  0.90911399,  0.66237992, -0.77716863],\n",
+       "       [-0.18953459,  1.21518903,  0.3735482 ,  0.08036239, -0.2571285 ],\n",
+       "       [ 0.89988211,  0.53497323,  0.5525803 , -1.01285668,  0.86418948]])"
       ]
      },
      "execution_count": 30,
@@ -733,9 +733,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.04673587,  1.09020197],\n",
-       "       [-0.46265755, -1.13755759],\n",
-       "       [-1.35745064, -0.80732653]])"
+       "array([[-0.36400634,  1.45830685],\n",
+       "       [ 0.90911399,  0.66237992],\n",
+       "       [ 0.3735482 ,  0.08036239]])"
       ]
      },
      "execution_count": 31,
@@ -763,9 +763,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[False, False],\n",
-       "       [ True,  True],\n",
-       "       [ True,  True]])"
+       "array([[ True, False],\n",
+       "       [False, False],\n",
+       "       [False, False]])"
       ]
      },
      "execution_count": 32,
@@ -786,7 +786,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.46265755, -1.13755759, -1.35745064, -0.80732653])"
+       "array([-0.36400634])"
       ]
      },
      "execution_count": 33,
@@ -999,8 +999,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[[[[0.38918799, 0.72170152, 0.78323928, 0.95214642, 0.36293907,\n",
-       "           0.40411706, 0.78112136, 0.43221752, 0.48527743, 0.33654361]]]]])"
+       "array([[[[[0.92594006, 0.30814763, 0.82250917, 0.61587907, 0.88905199,\n",
+       "           0.80125512, 0.91099433, 0.08912929, 0.7910404 , 0.38243728]]]]])"
       ]
      },
      "execution_count": 40,
@@ -1029,9 +1029,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.60836267 0.50776755 0.71856189]\n",
-      " [0.75940675 0.80273299 0.05233899]\n",
-      " [0.52951061 0.65943126 0.28401073]]\n"
+      "[[0.45818015 0.97569503 0.12076705]\n",
+      " [0.49271454 0.56768102 0.18399929]\n",
+      " [0.0727443  0.05067148 0.48317125]]\n"
      ]
     }
    ],
@@ -1048,7 +1048,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.52951061, 0.65943126, 0.28401073])"
+       "array([0.0727443 , 0.05067148, 0.48317125])"
       ]
      },
      "execution_count": 42,
@@ -1100,9 +1100,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 2.91407719, -1.01541892,  0.7065323 ],\n",
-       "       [-0.4581166 , -1.88083805, -0.47753377],\n",
-       "       [-0.3005257 , -0.74920519,  1.08129924]])"
+       "array([[ 1.07122716,  0.48579743, -0.75811139],\n",
+       "       [-1.56234088,  2.53575409, -0.66465163],\n",
+       "       [ 2.0092347 , -0.19221822, -1.05738646]])"
       ]
      },
      "execution_count": 43,
@@ -1124,9 +1124,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.91407719 -1.01541892  0.7065323 ]\n",
-      "[-0.4581166  -1.88083805 -0.47753377]\n",
-      "[-0.3005257  -0.74920519  1.08129924]\n"
+      "[ 1.07122716  0.48579743 -0.75811139]\n",
+      "[-1.56234088  2.53575409 -0.66465163]\n",
+      "[ 2.0092347  -0.19221822 -1.05738646]\n"
      ]
     }
    ],
@@ -1151,15 +1151,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.914077189561734\n",
-      "-1.0154189163045049\n",
-      "0.7065322983304965\n",
-      "-0.45811660488543454\n",
-      "-1.880838051228916\n",
-      "-0.4775337736221477\n",
-      "-0.3005256996806537\n",
-      "-0.7492051938751123\n",
-      "1.0812992382539215\n"
+      "1.071227159746845\n",
+      "0.48579743014118715\n",
+      "-0.7581113928390079\n",
+      "-1.5623408814717994\n",
+      "2.535754087878561\n",
+      "-0.664651625932036\n",
+      "2.0092347015763443\n",
+      "-0.1922182181264576\n",
+      "-1.057386456001086\n"
      ]
     }
    ],
@@ -1184,15 +1184,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0) 2.914077189561734\n",
-      "(0, 1) -1.0154189163045049\n",
-      "(0, 2) 0.7065322983304965\n",
-      "(1, 0) -0.45811660488543454\n",
-      "(1, 1) -1.880838051228916\n",
-      "(1, 2) -0.4775337736221477\n",
-      "(2, 0) -0.3005256996806537\n",
-      "(2, 1) -0.7492051938751123\n",
-      "(2, 2) 1.0812992382539215\n"
+      "(0, 0) 1.071227159746845\n",
+      "(0, 1) 0.48579743014118715\n",
+      "(0, 2) -0.7581113928390079\n",
+      "(1, 0) -1.5623408814717994\n",
+      "(1, 1) 2.535754087878561\n",
+      "(1, 2) -0.664651625932036\n",
+      "(2, 0) 2.0092347015763443\n",
+      "(2, 1) -0.1922182181264576\n",
+      "(2, 2) -1.057386456001086\n"
      ]
     }
    ],
@@ -1246,11 +1246,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1,\n",
-       "       1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0,\n",
-       "       1, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1,\n",
-       "       1, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 0])"
+       "array([1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1,\n",
+       "       0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 0, 1,\n",
+       "       0, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0,\n",
+       "       1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0])"
       ]
      },
      "execution_count": 48,
@@ -1272,10 +1272,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([ 3,  5,  6,  7,  9, 10, 12, 13, 15, 16, 17, 18, 19, 20, 21, 24, 26,\n",
-      "       27, 29, 30, 31, 32, 35, 36, 38, 43, 44, 45, 47, 49, 50, 51, 52, 53,\n",
-      "       57, 59, 62, 63, 66, 68, 69, 70, 74, 78, 79, 82, 83, 84, 86, 87, 88,\n",
-      "       89, 91, 92, 93, 94, 96, 98], dtype=int64),)\n"
+      "(array([ 0,  1,  2,  5,  6,  7,  8, 10, 13, 14, 15, 17, 19, 20, 21, 23, 24,\n",
+      "       25, 28, 29, 30, 31, 32, 34, 35, 37, 39, 40, 43, 45, 46, 48, 49, 50,\n",
+      "       51, 53, 54, 56, 58, 59, 60, 61, 62, 64, 65, 68, 69, 70, 72, 75, 76,\n",
+      "       78, 82, 83, 85, 88, 89, 90, 92, 93, 94, 96, 97, 98], dtype=int64),)\n"
      ]
     }
    ],
@@ -1308,8 +1308,8 @@
     {
      "data": {
       "text/plain": [
-       "array([0.99622669, 0.99177736, 0.98759537, 0.19355656, 0.36788029,\n",
-       "       0.37439273, 0.68753515, 0.01221266, 0.95951456, 0.27172284])"
+       "array([0.60247994, 0.6903803 , 0.31737065, 0.92436851, 0.01899771,\n",
+       "       0.27711267, 0.77880209, 0.90539368, 0.82912392, 0.93613905])"
       ]
      },
      "execution_count": 50,
@@ -1331,8 +1331,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.01221266 0.19355656 0.27172284 0.36788029 0.37439273 0.68753515\n",
-      " 0.95951456 0.98759537 0.99177736 0.99622669]\n"
+      "[0.01899771 0.27711267 0.31737065 0.60247994 0.6903803  0.77880209\n",
+      " 0.82912392 0.90539368 0.92436851 0.93613905]\n"
      ]
     }
    ],
@@ -1501,16 +1501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.93021136, 0.90950862, 0.49885093, 0.62925567, 0.00331665])"
+       "array([0.80922766, 0.07339197, 0.692298  , 0.63064713, 0.64404504])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,19 +1522,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([0.93021136, 0.90950862]),\n",
-       " array([0.49885093]),\n",
-       " array([0.62925567]),\n",
-       " array([0.00331665])]"
+       "[array([0.80922766, 0.07339197]),\n",
+       " array([0.692298]),\n",
+       " array([0.63064713]),\n",
+       " array([0.64404504])]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,10 +1559,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.87200645, 0.94731287, 0.71623025, 0.85308428],\n",
-       "       [0.38271549, 0.52093576, 0.85312661, 0.63151963],\n",
-       "       [0.91061084, 0.53197555, 0.26248818, 0.30284711],\n",
-       "       [0.59597486, 0.00256912, 0.36502603, 0.64731136]])"
+       "array([[0.96381894, 0.14949817, 0.74133784, 0.5797171 ],\n",
+       "       [0.36388414, 0.66892666, 0.74449837, 0.91068688],\n",
+       "       [0.63850951, 0.52644675, 0.20952553, 0.719797  ],\n",
+       "       [0.49787309, 0.56951184, 0.37060522, 0.52750831]])"
       ]
      },
      "execution_count": 59,
@@ -1578,31 +1578,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([[0.87200645],\n",
-       "        [0.38271549],\n",
-       "        [0.91061084],\n",
-       "        [0.59597486]]),\n",
-       " array([[0.94731287],\n",
-       "        [0.52093576],\n",
-       "        [0.53197555],\n",
-       "        [0.00256912]]),\n",
-       " array([[0.71623025],\n",
-       "        [0.85312661],\n",
-       "        [0.26248818],\n",
-       "        [0.36502603]]),\n",
-       " array([[0.85308428],\n",
-       "        [0.63151963],\n",
-       "        [0.30284711],\n",
-       "        [0.64731136]])]"
+       "[array([[0.96381894],\n",
+       "        [0.36388414],\n",
+       "        [0.63850951],\n",
+       "        [0.49787309]]),\n",
+       " array([[0.14949817],\n",
+       "        [0.66892666],\n",
+       "        [0.52644675],\n",
+       "        [0.56951184]]),\n",
+       " array([[0.74133784],\n",
+       "        [0.74449837],\n",
+       "        [0.20952553],\n",
+       "        [0.37060522]]),\n",
+       " array([[0.5797171 ],\n",
+       "        [0.91068688],\n",
+       "        [0.719797  ],\n",
+       "        [0.52750831]])]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
